--- a/Pray Together/Models/ProfileHeaderCollectionViewCell.xib
+++ b/Pray Together/Models/ProfileHeaderCollectionViewCell.xib
@@ -24,48 +24,47 @@
                 <rect key="frame" x="0.0" y="0.0" width="511" height="159"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcC-2N-zne">
-                        <rect key="frame" x="130" y="20" width="121.5" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcC-2N-zne">
+                        <rect key="frame" x="130" y="20" width="108.5" height="26"/>
                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleAspectFill" ambiguous="YES" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="FKB-Wu-Qft">
-                        <rect key="frame" x="130" y="99" width="511" height="13"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="m08-Q8-NvN">
+                        <rect key="frame" x="130" y="94" width="366" height="13"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="prayers" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcw-qf-o03">
-                                <rect key="frame" x="0.0" y="0.0" width="170.5" height="13"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="prayers" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcw-qf-o03">
+                                <rect key="frame" x="0.0" y="0.0" width="73" height="13"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="organizations" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YFX-hl-cxG">
-                                <rect key="frame" x="40.5" y="0.0" width="232" height="13"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="following" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fhZ-xs-nP8">
+                                <rect key="frame" x="73" y="0.0" width="73.5" height="13"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="groups" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OOG-2v-osi">
-                                <rect key="frame" x="210.5" y="0.0" width="170.5" height="13"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lpf-NY-WW1">
+                                <rect key="frame" x="146.5" y="0.0" width="73" height="13"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="orginizations" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YFX-hl-cxG">
+                                <rect key="frame" x="219.5" y="0.0" width="73.5" height="13"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="groups" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OOG-2v-osi">
+                                <rect key="frame" x="293" y="0.0" width="73" height="13"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aD1-e3-TfE">
-                        <rect key="frame" x="36" y="130" width="68" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Nbd-eU-FGi"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
-                        <state key="normal" title="Edit Profile">
-                            <color key="titleColor" red="0.55087739229999999" green="0.61406648159999999" blue="0.69024974110000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        </state>
-                        <connections>
-                            <action selector="editProfileButtonPressed:" destination="gTV-IL-0wX" eventType="touchUpInside" id="fzC-h5-scF"/>
-                        </connections>
-                    </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="uZr-0n-Pen">
                         <rect key="frame" x="20" y="20" width="100" height="100"/>
                         <constraints>
@@ -74,22 +73,14 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio:" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="VSL-vL-r4B">
-                        <rect key="frame" x="130" y="56" width="511" height="13"/>
+                        <rect key="frame" x="130" y="56" width="371" height="13"/>
                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="following" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fhZ-xs-nP8">
-                        <rect key="frame" x="167" y="134" width="49" height="15"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="followers" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lpf-NY-WW1">
-                        <rect key="frame" x="307" y="136" width="43" height="15"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REs-hn-mVI">
+                        <rect key="frame" x="33.5" y="125" width="73" height="17"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="13"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -97,18 +88,18 @@
             </view>
             <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
+                <constraint firstItem="m08-Q8-NvN" firstAttribute="top" secondItem="VSL-vL-r4B" secondAttribute="bottom" constant="25" id="5ju-6q-m7k"/>
                 <constraint firstItem="XcC-2N-zne" firstAttribute="leading" secondItem="uZr-0n-Pen" secondAttribute="trailing" constant="10" id="7nf-MU-akI"/>
-                <constraint firstItem="FKB-Wu-Qft" firstAttribute="leading" secondItem="uZr-0n-Pen" secondAttribute="trailing" constant="10" id="A7P-AQ-Veh"/>
                 <constraint firstAttribute="trailing" secondItem="VSL-vL-r4B" secondAttribute="trailing" constant="10" id="COV-cP-UNo"/>
-                <constraint firstAttribute="trailing" secondItem="FKB-Wu-Qft" secondAttribute="trailing" constant="10" id="XrS-bK-q8t"/>
+                <constraint firstItem="REs-hn-mVI" firstAttribute="centerX" secondItem="uZr-0n-Pen" secondAttribute="centerX" id="LDP-xK-hK8"/>
                 <constraint firstItem="XcC-2N-zne" firstAttribute="top" secondItem="uZr-0n-Pen" secondAttribute="top" id="YLi-o2-TwE"/>
                 <constraint firstItem="VSL-vL-r4B" firstAttribute="top" secondItem="XcC-2N-zne" secondAttribute="bottom" constant="10" id="Yuh-83-R1B"/>
                 <constraint firstItem="uZr-0n-Pen" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="bGH-u0-zw1"/>
+                <constraint firstItem="m08-Q8-NvN" firstAttribute="leading" secondItem="uZr-0n-Pen" secondAttribute="trailing" constant="10" id="bU5-Ax-3NP"/>
+                <constraint firstAttribute="trailing" secondItem="m08-Q8-NvN" secondAttribute="trailing" constant="15" id="cTb-lS-rmw"/>
+                <constraint firstItem="REs-hn-mVI" firstAttribute="top" secondItem="uZr-0n-Pen" secondAttribute="bottom" constant="5" id="cio-AV-RtC"/>
                 <constraint firstItem="uZr-0n-Pen" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="duF-fj-FaP"/>
-                <constraint firstItem="aD1-e3-TfE" firstAttribute="top" secondItem="uZr-0n-Pen" secondAttribute="bottom" constant="10" id="fWX-nV-kI7"/>
                 <constraint firstItem="VSL-vL-r4B" firstAttribute="leading" secondItem="XcC-2N-zne" secondAttribute="leading" id="q43-1X-cZV"/>
-                <constraint firstItem="FKB-Wu-Qft" firstAttribute="top" secondItem="VSL-vL-r4B" secondAttribute="bottom" constant="30" id="sbm-y1-aem"/>
-                <constraint firstItem="aD1-e3-TfE" firstAttribute="centerX" secondItem="uZr-0n-Pen" secondAttribute="centerX" id="xUy-mo-whv"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="511" height="154"/>
@@ -117,10 +108,11 @@
                 <outlet property="followersLabel" destination="Lpf-NY-WW1" id="MXe-YO-4LG"/>
                 <outlet property="followingLabel" destination="fhZ-xs-nP8" id="tgY-Sf-IT9"/>
                 <outlet property="groupsLabel" destination="OOG-2v-osi" id="4SK-AB-AGC"/>
+                <outlet property="nameLabel" destination="XcC-2N-zne" id="I9J-6v-txz"/>
                 <outlet property="organizationsLabel" destination="YFX-hl-cxG" id="Glp-KO-hYJ"/>
                 <outlet property="prayersLabel" destination="fcw-qf-o03" id="6gx-OX-MTE"/>
                 <outlet property="profileImage" destination="uZr-0n-Pen" id="KMK-fA-MhV"/>
-                <outlet property="usernameLabel" destination="XcC-2N-zne" id="QAG-BL-gQb"/>
+                <outlet property="usernameLabel" destination="REs-hn-mVI" id="PCh-pc-06x"/>
             </connections>
             <point key="canvasLocation" x="264.5" y="105.5"/>
         </collectionViewCell>
