--- a/Pray Together/Views/Base.lproj/Main.storyboard
+++ b/Pray Together/Views/Base.lproj/Main.storyboard
@@ -43,6 +43,15 @@
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3y-S8-660">
+                                        <rect key="frame" x="299" y="27" width="70" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="8"/>
+                                        <state key="normal" title="Search Users" image="search_selected"/>
+                                        <connections>
+                                            <segue destination="SxY-Q9-STX" kind="show" id="cxv-de-PXz"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -85,7 +94,106 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-290"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-290.10494752623691"/>
+        </scene>
+        <!--Search Users View Controller-->
+        <scene sceneID="XnM-iw-P4x">
+            <objects>
+                <viewController id="SxY-Q9-STX" customClass="SearchUsersViewController" customModule="Pray_Together" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tBm-4Y-9a8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qXu-no-efm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fYf-VI-Lnf">
+                                        <rect key="frame" x="126.5" y="25" width="122.5" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6eq-8q-fFQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="63.5" height="30"/>
+                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Users" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pFk-71-B6G">
+                                                <rect key="frame" x="63.5" y="0.0" width="59" height="30"/>
+                                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eCi-9L-I5K">
+                                        <rect key="frame" x="20" y="25" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="CKE-bT-DBJ"/>
+                                            <constraint firstAttribute="height" constant="30" id="X70-3p-qCa"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="25"/>
+                                        <state key="normal" title="&lt;"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="SxY-Q9-STX" eventType="touchUpInside" id="jkr-Pl-GgK"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="eCi-9L-I5K" firstAttribute="top" secondItem="qXu-no-efm" secondAttribute="top" constant="25" id="Ax3-EY-m9x"/>
+                                    <constraint firstItem="fYf-VI-Lnf" firstAttribute="centerX" secondItem="qXu-no-efm" secondAttribute="centerX" id="F18-x7-uak"/>
+                                    <constraint firstItem="fYf-VI-Lnf" firstAttribute="top" secondItem="qXu-no-efm" secondAttribute="top" constant="25" id="VHA-cM-3RK"/>
+                                    <constraint firstItem="eCi-9L-I5K" firstAttribute="centerY" secondItem="6eq-8q-fFQ" secondAttribute="centerY" id="nqR-L7-bjw"/>
+                                    <constraint firstItem="eCi-9L-I5K" firstAttribute="leading" secondItem="qXu-no-efm" secondAttribute="leading" constant="20" id="qgI-X4-Nkj"/>
+                                    <constraint firstAttribute="height" constant="70" id="tMZ-hm-0CH"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Users" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="24H-b5-cC7">
+                                <rect key="frame" x="10" y="80" width="355" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Y7b-P1-TvC"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Hk-Pc-qcm">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qVD-ZB-FZe">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qVD-ZB-FZe" id="yIp-kQ-gto">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GOx-j1-8ta" firstAttribute="trailing" secondItem="0Hk-Pc-qcm" secondAttribute="trailing" id="9Ys-1Z-8ff"/>
+                            <constraint firstItem="GOx-j1-8ta" firstAttribute="trailing" secondItem="24H-b5-cC7" secondAttribute="trailing" constant="10" id="BoE-f3-w3S"/>
+                            <constraint firstItem="0Hk-Pc-qcm" firstAttribute="top" secondItem="24H-b5-cC7" secondAttribute="bottom" constant="10" id="IMw-Rv-Cfz"/>
+                            <constraint firstItem="24H-b5-cC7" firstAttribute="leading" secondItem="GOx-j1-8ta" secondAttribute="leading" constant="10" id="OCK-3B-hTF"/>
+                            <constraint firstItem="qXu-no-efm" firstAttribute="top" secondItem="tBm-4Y-9a8" secondAttribute="top" id="dc4-Md-t2v"/>
+                            <constraint firstItem="qXu-no-efm" firstAttribute="trailing" secondItem="GOx-j1-8ta" secondAttribute="trailing" id="gUN-L8-w2u"/>
+                            <constraint firstItem="qXu-no-efm" firstAttribute="leading" secondItem="GOx-j1-8ta" secondAttribute="leading" id="qAk-ib-5DY"/>
+                            <constraint firstItem="24H-b5-cC7" firstAttribute="top" secondItem="qXu-no-efm" secondAttribute="bottom" constant="10" id="s2d-nZ-Vlk"/>
+                            <constraint firstItem="GOx-j1-8ta" firstAttribute="bottom" secondItem="0Hk-Pc-qcm" secondAttribute="bottom" id="xLf-iR-Rqu"/>
+                            <constraint firstItem="0Hk-Pc-qcm" firstAttribute="leading" secondItem="GOx-j1-8ta" secondAttribute="leading" id="zsR-Hk-jbd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GOx-j1-8ta"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="24H-b5-cC7" id="Nej-eY-ESD"/>
+                        <outlet property="searchResultsTableView" destination="0Hk-Pc-qcm" id="REF-lH-jUr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLy-NI-sMq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1447" y="-294"/>
         </scene>
         <!--New Prayer-->
         <scene sceneID="QWw-UA-XU9">
@@ -1318,6 +1426,7 @@
         <image name="feed-tabIcon" width="25" height="21"/>
         <image name="groups-tabIcon" width="25" height="23"/>
         <image name="me-tabIcon" width="25" height="25"/>
+        <image name="search_selected" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="uSO-Pz-YlB"/>
